--- a/WebApplication800000/Views/Customers/Edit.cshtml
+++ b/WebApplication800000/Views/Customers/Edit.cshtml
@@ -64,7 +64,7 @@
                 @Html.ValidationMessageFor(model => model.phone_number, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        @if (Request.Cookies["adminCookie"].Value == "true") {
         <div class="form-group">
             @Html.LabelFor(model => model.is_admin, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -72,7 +72,7 @@
                 @Html.ValidationMessageFor(model => model.is_admin, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        }
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
