--- a/WebApplication800000/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication800000/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNet.Identity
-@if (Request.Cookies.Get("productcookie").Value == "admin")
+@*@if (Request.Cookies.Get("productcookie").Value == "admin")*@
+@if (false)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
