--- a/WebApplication800000/Views/Shared/_Layout.cshtml
+++ b/WebApplication800000/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("Productshowcase", "Productshowcase", "Product")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Wishlist", "Wishlist", "Product")</li>
                 </ul>
                @Html.Partial("_LoginPartial")
             </div>
