--- a/WebApplication800000/Views/Product/Shoppingcart.cshtml
+++ b/WebApplication800000/Views/Product/Shoppingcart.cshtml
@@ -22,6 +22,9 @@
         tr:nth-child(even) {
             background-color: #dddddd;
         }
+        h3 {
+            text-align: right;
+        }
     </style>
 </head>
 <body>
@@ -45,5 +48,9 @@
         }
 
     </table>
+
+    <h3><b>@Html.ActionLink("Checkout", "BuyProducts", "Product")</b></h3>
+
+
 </body>
 </html>
