--- a/WebApplication800000/Views/Product/Productshowcase.cshtml
+++ b/WebApplication800000/Views/Product/Productshowcase.cshtml
@@ -1,12 +1,31 @@
 ﻿@using WebApplication800000.Controllers
 @using System.Threading.Tasks
 @{
-    ViewBag.Title = "Productshowcase";
+    ViewBag.Title = "Browse Products";
 }
-<h2>Productshowcase</h2>
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Alterhate</title>
+
+    <!-- Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <script type="text/javascript" src="~/Scripts/jquery-latest.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.tablesorter.js"></script> 
@@ -30,6 +49,30 @@
     
 </head>
 <body>
+    <div class="site-branding-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="logo">
+                        <h1><a>A<span>lterhate</span></a></h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> <!-- End site branding area -->
+
+    <div class="product-big-title-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="product-bit-title text-center">
+                        <h2>Shop</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <table id="myTable" class="tablesorter">
         <thead>
             <tr>
@@ -44,17 +87,29 @@
             {
                 <tr>
                     <td><tc>
-                        @if (x.Catagory == "MIS")
+                        @if(x.Manufactorer == "Msi")
                         {
-                            <img src="~/img/MSI.jpeg" style="max-height:50%; max-width:50%"/>
+                            <img src="~/img/MSI.png" style="max-height:30%; max-width:30%"/>
                         }
-                        @if (x.Catagory == "Acer")
+                        else if(x.Manufactorer == "Acer")
                         {
-                            <img src="~/img/Acer.jpeg" style="max-height:50%; max-width:50%"/>
+                            <img src="~/img/Acer.png" style="max-height:30%; max-width:30%"/>
                         }
-                        @if (x.Catagory == "Samsung")
+                        else if(x.Manufactorer == "Microsoft")
                         {
-                            <img src="~/img/Samsung.jpg" style="max-height:50%; max-width:50%"/>
+                            <img src="~/img/Microsoft surface pro 4.png" style="max-height:30%; max-width:30%"/>
+                        }
+                        else if(x.Manufactorer == "Lenovo")
+                        {
+                            <img src="~/img/Lenovo yoga.png" style="max-height:30%; max-width:30%"/>
+                        }
+                        else if(x.Manufactorer == "Samsung")
+                        {
+                            <img src="~/img/Samsung.png" style="max-height:30%; max-width:30%"/>
+                        }
+                        else if (x.Manufactorer == "Asus")
+                        {
+                            <img src="~/img/Asus zenbook.png" style="max-height:30%; max-width:30%" />
                         }
                         @x.Name</tc></td>
                     <td><tc>@x.Catagory</tc></td>
@@ -68,5 +123,6 @@
             }
         </tbody>
     </table>
+
 </body>
 </html>
