--- a/WebApplication800000/Views/Shared/_Layout.cshtml
+++ b/WebApplication800000/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "index", "Home")</li>
-                    <li>@Html.ActionLink("Browseproduct", "Browseproduct", "Product")</li>
-                    <li>@Html.ActionLink("Product", "Singleproduct", "Product")</li>
+                    @*<li>@Html.ActionLink("Browseproduct", "Browseproduct", "Product")</li>
+                    <li>@Html.ActionLink("Product", "Singleproduct", "Product")</li>*@
                     <li>@Html.ActionLink("Productshowcase", "Productshowcase", "Product")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
