--- a/WebApplication800000/Views/Customers/Edit.cshtml
+++ b/WebApplication800000/Views/Customers/Edit.cshtml
@@ -44,7 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -64,14 +64,18 @@
                 @Html.ValidationMessageFor(model => model.phone_number, "", new { @class = "text-danger" })
             </div>
         </div>
-        @if (Request.Cookies["adminCookie"].Value == "true") {
-        <div class="form-group">
-            @Html.LabelFor(model => model.is_admin, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.is_admin, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.is_admin, "", new { @class = "text-danger" })
+        @if (Request.Cookies["adminCookie"] != null)
+        {
+            if (Request.Cookies["adminCookie"].Value == "true")
+            {
+            <div class="form-group">
+                @Html.LabelFor(model => model.is_admin, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.is_admin, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.is_admin, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
+            }
         }
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -80,6 +84,9 @@
         </div>
     </div>
 }
+<div>
+    @Html.ActionLink("Add an address", "Create", "Addresses")
+</div>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
