--- a/WebApplication800000/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication800000/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using Microsoft.AspNet.Identity
-@*@if (Request.Cookies.Get("productcookie").Value == "admin")*@
-@if (Request.Cookies["loggedInCookie"] != null)
+﻿@if (Request.Cookies["loggedInCookie"] != null && Request.Cookies["customerIdCookie"] != null)
 {
     if (Request.Cookies["loggedInCookie"].Value == "true")
     {
@@ -8,7 +6,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + "user" + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Hello " + "user" + "!", "Edit/" + Request.Cookies["customerIdCookie"].Value, "Customers", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li>
             @Html.ActionLink("Log out", "Logout", "Customers") 
