--- a/WebApplication800000/Views/Home/Contact.cshtml
+++ b/WebApplication800000/Views/Home/Contact.cshtml
@@ -4,11 +4,10 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
-    Wijnhaven 107<br />
-    Rotterdam 3011WN<br />
-</address>
-
-<address>
-
-</address>
+<form action="" method="POST" enctype="multipart/form-data">
+    <input name="action" value="submit" type="hidden"> Your name:<br>
+    <input name="name" size="30" type="text"><br> Your email:<br>
+    <input name="email" size="30" type="text"><br> Your message:<br>
+    <textarea name="message" rows="7" cols="30"></textarea><br>
+    <input value="Send email" type="submit">
+</form>
