Database Insert Into giant queries

--- a/WebApplication800000/Views/Product/BuyProducts.cshtml
+++ b/WebApplication800000/Views/Product/BuyProducts.cshtml
@@ -52,6 +52,8 @@
             </tfoot>
         }
     </table>
+
+    <h3><b>@Html.ActionLink("Confirm Order", "AfterBuyProducts", "Product")</b></h3>
     
 
 </body>
