--- a/WebApplication800000/Views/Product/BuyProducts.cshtml
+++ b/WebApplication800000/Views/Product/BuyProducts.cshtml
@@ -10,21 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alterhate</title>
 
-    <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/owl.carousel.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/responsive.css">
     <script type="text/javascript" src="~/Scripts/jquery-latest.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.tablesorter.js"></script> 
 
@@ -44,6 +29,9 @@
         tr:nth-child(even) {
             background-color: #dddddd;
         }
+        td{
+            white-space: nowrap;
+        }
     </style>
 </head>
 <body>
@@ -57,7 +45,7 @@
                 </div>
             </div>
         </div>
-    </div> <!-- End site branding area -->
+    </div>
 
     <div class="product-big-title-area">
         <div class="container">
