--- a/WebApplication800000/Views/Shared/_Layout.cshtml
+++ b/WebApplication800000/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     @*<li>@Html.ActionLink("Browseproduct", "Browseproduct", "Product")</li>
                     <li>@Html.ActionLink("Product", "Singleproduct", "Product")</li>*@
                     <li>@Html.ActionLink("Productshowcase", "Productshowcase", "Product")</li>
+                    <li>@Html.ActionLink("Userwishlist", "Userwishlist", "Product")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Wishlist", "Wishlist", "Product")</li>
