--- a/WebApplication800000/Views/Home/About.cshtml
+++ b/WebApplication800000/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>To be implemented</p>
+<p>We are Alterhate!</p>
+<p>We are a competitor of Alternate</p>
+<p>Our service and prices are better than theirs!</p>
+
+
