--- a/WebApplication800000/Views/Customers/Delete.cshtml
+++ b/WebApplication800000/Views/Customers/Delete.cshtml
@@ -3,7 +3,10 @@
 @{
     ViewBag.Title = "Delete";
 }
-
+@if (Request.Cookies["adminCookie"] != null)
+{
+    if (Request.Cookies["adminCookie"].Value == "true")
+    {
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -53,7 +56,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
@@ -62,3 +66,5 @@
         </div>
     }
 </div>
+    }
+}
