--- a/WebApplication800000/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication800000/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + "user" + "!", "Edit/" + Request.Cookies["customerIdCookie"].Value, "Customers", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Hello " + "user" + "!", "Details/" + Request.Cookies["customerIdCookie"].Value, "Customers", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li>
             @Html.ActionLink("Log out", "Logout", "Customers") 
