--- a/WebApplication800000/Views/Customers/Edit.cshtml
+++ b/WebApplication800000/Views/Customers/Edit.cshtml
@@ -89,9 +89,8 @@ using (Html.BeginForm())
         </div>
     </div>
 }
-
 <div>
-    @Html.ActionLink("Add an address", "Create", "Addresses")
+    @Html.ActionLink("Your address", "Create", "Addresses")
 </div>
             if (Request.Cookies["adminCookie"] != null)
             {
