Wilco is de baas
Wilco is de man die alles kan

--- a/WebApplication800000/Views/Customers/Edit.cshtml
+++ b/WebApplication800000/Views/Customers/Edit.cshtml
@@ -89,6 +89,13 @@ using (Html.BeginForm())
         </div>
     </div>
 }
+
+<div>
+    @Html.ActionLink("Make wishlist public", "addUser", "User")
+</div>    
+<div>
+    @Html.ActionLink("Make wishlist private", "remUser", "User")
+</div>
 <div>
     @Html.ActionLink("Your address", "Create", "Addresses")
 </div>
